test/visibility/import/rename/renameAllNoQualified2.good
renameAllNoQualified2.chpl:13: In function 'main':
renameAllNoQualified2.chpl:14: error: 'M' undeclared (first use this function)
